--- a/contract/Move.toml
+++ b/contract/Move.toml
@@ -1,10 +1,11 @@
 [package]
 name = 'nft'
 version = '1.0.0'
-[dependencies.AptosFramework]
-git = 'https://github.com/aptos-labs/aptos-core.git'
-rev = 'main'
-subdir = 'aptos-move/framework/aptos-framework'
+
+[dependencies]
+MoveStdlib = { local = "../../../aptos-core/aptos-move/framework/move-stdlib" }
+AptosFramework = { local = "../../../aptos-core/aptos-move/framework/aptos-framework"}
+AptosToken = { local = "../../../aptos-core/aptos-move/framework/aptos-token"}
 
 [addresses]
 wav3 = "0x3"
